--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview", 
-    "server":"json-server --watch data/cities.json --port 9000"
+    "preview": "vite preview",
+    "server": "json-server --watch data/cities.json --port 9000"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
